--- a/src/app.html
+++ b/src/app.html
@@ -13,8 +13,10 @@
 		})(window, document, 'script', 'dataLayer', 'GTM-KQPB67W');</script>
 	<!-- End Google Tag Manager -->
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.gif" />
 	<meta name="viewport" content="width=device-width" />
+	<title>Mojo CAT - Primers al món en educar amb IA</title>
+	<meta name="description" content="Integració vertical de Inteligencia Artificial al teu negoci." />
 	%sveltekit.head%
 </head>
 
