gh 0.0.1 source code

--- a/src/app.html
+++ b/src/app.html
@@ -28,4 +28,7 @@
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
+<footer class="footer">
+	Mojo Cat. Tots els drets reservats. mojo.cat no és un lloc oficial afiliat a Modular
+</footer>
 </html>
