gh 0.0.1 source code

--- a/src/app.html
+++ b/src/app.html
@@ -29,6 +29,6 @@
 </body>
 
 <footer class="footer">
-	Mojo Cat. Tots els drets reservats. mojo.cat no és un lloc oficial afiliat a Modular
+	Mojo Cat. Tots els drets reservats. mojo.cat no és un lloc oficial afiliat a Modular.
 </footer>
 </html>
